src/estarde/snapshots/annatto__estarde__query__tests__fails.snap
---
source: src/estarde/query.rs
expression: probe.err().unwrap()
---
TOML parse error at line 1, column 9
  |
1 | query = 'annis:tok'
  |         ^^^^^^^^^^^
Error with
query: `annis:tok`
error: [0:7-0:9] Unexpected token in query. Expected one of: ID
